# iskra-browser

./: brave_paks.gni  package-lock.json  package.json  snapcraft.yaml
android/java/brave-res/layout/: brave_toolbar.xml
app/: brave_exe.ver  brave_generated_resources.grd  brave_strings.grd  brave_strings_override.grd  generated_resources.grd  generated_resources_override.grd  settings_brave_strings.grdp  settings_brave_strings_override.grdp
app/theme/brave/: BRANDING  BRANDING.beta  BRANDING.dev  BRANDING.development  BRANDING.nightly
browser/: BUILD.gn  brave_content_browser_client.cc  sources.gni
browser/extensions/: BUILD.gn  brave_component_loader.cc  brave_component_loader.h  brave_extension_provider.cc
browser/resources/settings/brave_tor_page/: brave_tor_subpage.ts
browser/ui/android/strings/: android_brave_strings.grd  android_chrome_strings.grd  android_chrome_strings_override.grd
browser/ui/views/brave_actions/: BUILD.gn  brave_actions_container.cc  (+3 more)
chromium_src/extensions/common/: constants.h
components/iskra_collector/buildflags/: BUILD.gn  buildflags.gni
components/iskra_customizer/: BUILD.gn
components/iskra_customizer/extension/: resources.grd
components/iskra_customizer/extension/iskra_customizer/: content_script.js  manifest.json  popup.html  popup.js
components/p3a/: p3a_config.cc
renderer/: BUILD.gn  brave_content_renderer_client.cc  sources.gni
resources/: resource_ids.spec
script/: check_npm_licenses.py
script/brand/: brand_config.js  generate_brand_files.js
script/lib/l10n/: grd_string_replacements.py
(+9 files in other folders)
